--- a/src/b_vars.css
+++ b/src/b_vars.css
@@ -3,28 +3,47 @@
 */
 
 :root {
-  font-family: var(--font-normal); /* Default font family for root element */
-  /* Colors */
-  --theme: #385cfa; /* Universal theme color */
-  --bg: #f0f0f6; /* Background color for light mode */
-  --fg: #17171f; /* Foreground color for light mode */
+  /* Global Font Settings */
+  font-family: var(--font-normal);
+
+  /* Color Palette */
+  --theme: #385cfa; /* Primary theme color */
+  --success: #5cfa38; /* Success color */
+  --warning: #fad638; /* Warning color */
+  --danger: #fa385c; /* Danger color */
+  --bg: #f0f0f6; /* Background color (light mode) */
+  --fg: #17171f; /* Foreground color (light mode) */
 
   /* Typography */
   --font-normal: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; /* Default font for normal text elements */
-  --font-heading: "Gill Sans", sans-serif; /* Default font for heading elements */
-  --font-mono: ui-monospace, monospace; /* Default font for mono/code elements */
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --font-heading: "Gill Sans", sans-serif;
+  --font-mono: ui-monospace, monospace;
 
   /* Spacing */
-  --space-xs: 4px; /* Extra small spacing for tight layouts */
-  --space-sm: 8px; /* Small spacing for compact layouts */
-  --space-md: 16px; /* Medium spacing for regular gaps */
-  --space-lg: 32px; /* Large spacing for wide gaps */
+  --space-xs: 4px;
+  --space-sm: 8px;
+  --space-md: 16px;
+  --space-lg: 32px;
+  --radius: 0.375rem;
 }
 
+/* Dark Mode Variables */
 .dark {
-  --bg: #131417; /* Background color for dark mode */
-  --fg: #e0e0e0; /* Foreground color for dark mode */
+  --bg: #131417;
+  --fg: #e0e0e0;
+}
+
+.dark,
+:root {
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
+}
+
+:focus-visible {
+  outline: 2px solid var(--btn-bg, var(--theme)); /* Add an outline */
+  outline-offset: 2.5px; /* Offset the outline slightly */
 }
 
 /* 
