--- a/src/g_scroll.css
+++ b/src/g_scroll.css
@@ -2,63 +2,56 @@
  * <Scroll>
 */
 
-/* 
- * WebKit Browsers (Chrome, Safari, Edge) Scrollbar Styles 
- */
-
 /* Set scrollbar width and height */
 html,
 .scroll::-webkit-scrollbar {
-  width: 4px; /* Vertical scrollbar width */
-  height: 4px; /* Horizontal scrollbar height */
+  width: 4px;
+  height: 4px;
 }
 
 /* Style the scrollbar track (background area) */
 html,
 .scroll::-webkit-scrollbar-track {
-  background-color: var(--sc-bg); /* Set track color */
-  border-radius: 8px; /* Rounded corners for a smoother look */
+  background-color: var(--sc-bg);
+  border-radius: 8px;
 }
 
 /* Style the scrollbar thumb (draggable part) */
 html,
 .scroll::-webkit-scrollbar-thumb {
-  background-color: var(--sc-fg); /* Set thumb color */
-  border-radius: 6px; /* Rounded corners for consistency */
+  background-color: var(--sc-fg);
+  border-radius: 6px;
 }
 
 /* Hover effect on scrollbar thumb for better interaction */
 html,
 .scroll::-webkit-scrollbar-thumb:hover {
-  background-color: var(--sc-hover-fg); /* Darker shade on hover */
+  background-color: var(--sc-hover-fg);
 }
 
 /* Style the corner where horizontal and vertical scrollbars meet */
 html,
 .scroll::-webkit-scrollbar-corner {
-  background-color: var(--sc-fg); /* Set to match track color */
+  background-color: var(--sc-fg);
 }
-
-/* 
- * Firefox Scrollbar Styles 
- */
 
 /* Use thin scrollbar and custom colors */
 html,
 .scroll {
-  --sc-bg: #f3f4f6; /* Background color of the scrollbar track */
-  --sc-fg: #d1d5db; /* Default color of the scrollbar thumb */
-  --sc-hover-fg: #6b7280; /* Color of the scrollbar thumb on hover */
-  scrollbar-width: thin; /* Make scrollbar slim for a sleek look */
-  scrollbar-color: var(--sc-fg) var(--sc-bg); /* Thumb and track colors */
+  --sc-bg: #f3f4f6;
+  --sc-fg: #d1d5db;
+  --sc-hover-fg: #6b7280;
+
+  scrollbar-width: thin;
+  scrollbar-color: var(--sc-fg) var(--sc-bg);
 }
 
 /* Dark Mode */
 html .dark,
 .dark .scroll {
-  --sc-bg: #111827; /* Background color of the scrollbar track */
-  --sc-fg: #374151; /* Default color of the scrollbar thumb */
-  --sc-hover-fg: #4b5563; /* Color of the scrollbar thumb on hover */
+  --sc-bg: #111827;
+  --sc-fg: #374151;
+  --sc-hover-fg: #4b5563;
 }
 
 /*
