--- a/src/e_components.css
+++ b/src/e_components.css
@@ -3,28 +3,25 @@
 */
 
 /* FORM */
-input,
-textarea,
-select,
-.inp {
-  accent-color: var(--accent);
+:is(input, textarea, select) {
   transition:
     border-color 200ms ease-in-out,
     box-shadow 200ms ease-in-out;
+  accent-color: var(--accent);
 }
 
 /* Normal state */
 select,
 textarea,
-input[type='text'],
-input[type='email'],
-input[type='password'] {
-  border: 1px solid var(--border, var(--text));
-  padding: var(--space-sm, 0.5rem) var(--space-md, 1rem);
-  border-radius: var(--radius);
-  font-size: var(--form-fs, 16px);
+input[type="text"],
+input[type="email"],
+input[type="password"] {
   width: 100%;
   max-width: 100%;
+  padding: var(--space-sm, 0.5rem) var(--space-md, 1rem);
+  font-size: var(--form-fs, 16px);
+  border: 1px solid var(--border, var(--text));
+  border-radius: var(--radius);
   transition:
     border-color 200ms ease-in-out,
     box-shadow 200ms ease-in-out;
@@ -33,9 +30,9 @@ input[type='password'] {
 /* Focus state */
 select:focus,
 textarea:focus,
-input[type='text']:focus,
-input[type='email']:focus,
-input[type='password']:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
   border-color: var(--accent);
   box-shadow: 0 0 4px var(--accent);
 }
@@ -54,24 +51,24 @@ textarea:focus-visible {
 
 input:disabled,
 textarea:disabled {
-  opacity: 0.8;
   cursor: not-allowed;
+  opacity: 0.8;
 }
 
 /* BUTTONS */
 
 /* Base:Normal state */
 .btn {
-  background: var(--btn-bg, var(--accent));
+  margin: 4px 3.2px;
+  width: max-content;
+  padding: var(--space-xs);
+  display: inline-block;
   color: var(--btn-fg, var(--fg));
   font-size: var(--form-fs, 1rem);
-  display: inline-block;
-  width: max-content;
   text-align: center;
-  padding: var(--space-xs);
-  margin: 4px 3.2px;
-  border-radius: var(--radius);
+  background: var(--btn-bg, var(--accent));
   border: none;
+  border-radius: var(--radius);
   outline: none;
   cursor: pointer;
   transition:
@@ -95,15 +92,15 @@ textarea:disabled {
 
 /* Outline:Normal state */
 .btn-outline {
-  border: 2px solid var(--btn-bg, var(--accent));
-  background: transparent;
+  margin: 4px 3.2px;
+  width: auto;
+  padding: var(--space-sm) var(--space-md);
+  display: inline-block;
   color: var(--btn-bg, var(--accent));
   font-size: var(--form-fs, 16px);
-  display: inline-block;
-  width: auto;
   text-align: center;
-  padding: var(--space-sm) var(--space-md);
-  margin: 4px 3.2px;
+  background: transparent;
+  border: 2px solid var(--btn-bg, var(--accent));
   border-radius: var(--radius);
   cursor: pointer;
   transition:
@@ -114,8 +111,8 @@ textarea:disabled {
 
 /* Outline:Hover state */
 .btn-outline:hover {
-  background: var(--btn-bg, var(--accent));
   color: var(--btn-text, var(--fg));
+  background: var(--btn-bg, var(--accent));
 }
 
 /* Disabled state */
