--- a/src/e_components.css
+++ b/src/e_components.css
@@ -2,7 +2,44 @@
  * <Components>
 */
 
-/* FORM */
+/* Semantic Elements */
+aside {
+  float: right;
+  width: 30%;
+  padding: 0 15px;
+  font-size: 1rem;
+  margin-inline-start: 10px;
+}
+
+*[dir="rtl"] aside {
+  float: left;
+}
+
+@media only screen and (max-width: 720px) {
+  aside {
+    float: none;
+    width: 100%;
+    margin-inline-start: 2.5px;
+  }
+}
+
+section {
+  margin: 3rem 0;
+  padding: calc(var(--spacing) * 4.5) calc(var(--spacing) * 3.5);
+  border-top: 0.8px solid var(--color-text);
+  border-bottom: 0.9px solid var(--color-text);
+}
+
+footer {
+  margin-top: 4rem;
+  min-width: 95vw;
+  padding: var(--space-sm) var(--space-md);
+  font-size: 0.9rem;
+  text-align: center;
+  border-top: 1px solid var(--color-text);
+}
+
+/* Form Elements */
 :is(input, button, textarea, select) {
   transition:
     color 175ms ease-in-out,
@@ -10,10 +47,57 @@
     background-color 175ms ease-in-out,
     border 175ms ease-in-out,
     box-shadow 175ms ease-in-out;
-  accent-color: var(--accent);
+  accent-color: var(--color-accent);
 }
 
-/* Normal state */
+input[type="checkbox"],
+input[type="radio"] {
+  position: relative;
+  width: min-content;
+  vertical-align: middle;
+}
+
+input[type="checkbox"] + label,
+input[type="radio"] + label {
+  display: inline-block;
+}
+
+input[type="radio"] {
+  border-radius: 100%;
+}
+
+input[type="checkbox"]:checked,
+input[type="radio"]:checked {
+  background-color: var(--accent);
+}
+
+input[type="checkbox"]:checked::after {
+  position: absolute;
+  top: 0.05em;
+  left: 0.17em;
+  width: 0.18em;
+  height: 0.32em;
+  font-size: 1.8em;
+  background-color: transparent;
+  border-right: solid var(--bg) 0.08em;
+  border-bottom: solid var(--bg) 0.08em;
+  border-radius: 0;
+  transform: rotate(45deg);
+  content: " ";
+}
+
+input[type="radio"]:checked::after {
+  position: absolute;
+  top: 0.125em;
+  left: 0.125em;
+  width: 0.25em;
+  height: 0.25em;
+  font-size: 32px;
+  background-color: var(--bg);
+  border-radius: 100%;
+  content: " ";
+}
+
 select,
 textarea,
 input[type="text"],
@@ -23,21 +107,20 @@ input[type="password"] {
   max-width: 100%;
   padding: var(--space-sm, 0.5rem) var(--space-md, 1rem);
   font-size: var(--form-fs, 16px);
-  border: 1px solid var(--border, var(--text));
+  border: 1px solid var(--border, var(--color-text));
   border-radius: var(--radius);
   transition:
     border-color 200ms ease-in-out,
     box-shadow 200ms ease-in-out;
 }
 
-/* Focus state */
 select:focus,
 textarea:focus,
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
-  border-color: var(--accent);
-  box-shadow: 0 0 4px var(--accent);
+  border-color: var(--color-accent);
+  box-shadow: 0 0 4px var(--color-accent);
 }
 
 input::placeholder,
@@ -48,20 +131,17 @@ textarea::placeholder {
 
 input:focus-visible,
 textarea:focus-visible {
-  outline: 2px solid var(--accent);
-  outline-offset: 4px;
+  outline: 1.5px solid var(--color-accent);
+  outline-offset: 2.5px;
 }
 
-input:disabled,
-textarea:disabled {
-  cursor: not-allowed;
-  opacity: 0.8;
-}
-
-/* BUTTONS */
-
-/* Base:Normal state */
-.btn {
+/* Buttons */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"],
+.btn,
+a.btn {
   margin: 4px 3.2px;
   width: max-content;
   padding: var(--space-xs);
@@ -69,56 +149,70 @@ textarea:disabled {
   color: var(--btn-fg, var(--fg));
   font-size: var(--form-fs, 1rem);
   text-align: center;
-  background: var(--btn-bg, var(--accent));
+  background: var(--btn-bg, var(--color-accent));
   border: none;
   border-radius: var(--radius);
   outline: none;
   cursor: pointer;
   transition:
-    background 300ms ease-in,
-    outline 300ms ease-in,
-    border 300ms ease-in;
+    background 200ms ease-in,
+    outline 200ms ease-in,
+    border 200ms ease-in;
 }
 
-/* Base:Hover state */
-.btn:hover {
-  background: var(--btn-bg-hover, var(--accent-hover));
+button:hover,
+[type="button"]:hover,
+[type="reset"]:hover,
+[type="submit"]:hover,
+.btn:hover,
+a.btn:hover {
+  background: var(--btn-bg-hover, var(--color-accent-hover));
 }
 
-/* Base:Focus state */
-.btn:focus,
-.btn:focus-visible {
-  background: var(--btn-bg, var(--accent));
-  outline: 2px solid var(--btn-bg, var(--accent));
-  outline-offset: 2.5px;
+button:focus,
+[type="button"]:focus,
+[type="reset"]:focus,
+[type="submit"]:focus,
+a.btn:focus,
+.btn:focus {
+  background: var(--btn-bg, var(--color-accent));
+  outline: 1.25px solid var(--btn-bg, var(--color-accent));
+  outline-offset: 1.75px;
 }
 
-/* Outline:Normal state */
+.btn:focus-visible,
+button:focus-visible:where(:enabled),
+input:enabled:focus-visible:where([type="submit"], [type="reset"], [type="button"]) {
+  outline: 1.25px solid var(--btn-bg, var(--color-accent));
+  outline-offset: 1.75px;
+}
+
 .btn-outline {
   margin: 4px 3.2px;
   width: auto;
   padding: var(--space-sm) var(--space-md);
   display: inline-block;
-  color: var(--btn-bg, var(--accent));
+  color: var(--btn-bg, var(--color-accent));
   font-size: var(--form-fs, 16px);
   text-align: center;
   background: transparent;
-  border: 2px solid var(--btn-bg, var(--accent));
+  border: 2px solid var(--btn-bg, var(--color-accent));
   border-radius: var(--radius);
   cursor: pointer;
 }
 
-/* Outline:Hover state */
 .btn-outline:hover {
   color: var(--btn-text, var(--fg));
-  background: var(--btn-bg, var(--accent));
+  background: var(--btn-bg, var(--color-accent));
 }
 
-/* Disabled state */
-.btn:disabled,
-.btn-outline:disabled {
+.button[aria-disabled="true"],
+input:disabled,
+textarea:disabled,
+select:disabled,
+button[disabled] {
   cursor: not-allowed;
-  opacity: 0.75;
+  opacity: 0.8;
 }
 
 /*
